--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,12 @@
 name: Release
 
 on:
-  workflow_dispatch:
-  push:
-    tags:
-      - v*
-    paths-ignore:
-      - ".github/**"
-      - "**/*.md"
+  workflow_dispatch
 
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: lint_build_test
     defaults:
       run:
         shell: bash
@@ -22,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: main
 
       - name: Use Node.js 14 x64
         uses: actions/setup-node@v2
@@ -30,23 +24,24 @@ jobs:
           architecture: x64
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Get version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
+      - name: Tag commit and push
+        uses: mathieudutour/github-tag-action@v5.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.package-version.outputs.current-version }}
+
       - name: Install
         run: npm ci
-
-      - name: Validate version tag
-        run: |
-          build/version-utils.js validate-latest-tag
 
       - name: Prepare release
         id: prepare_release
         run: |
-          echo ::set-output name=version_tag::$( build/version-utils.js latest-version-tag)
-          echo ::set-output name=version::$( build/version-utils.js version-from-tags)
-          echo ::set-output name=release_type::$( build/version-utils.js version-type )
-
-      - name: Ensure correct revision
-        run: |
-          git checkout tags/${{ steps.prepare_release.outputs.version_tag }}
+          echo ::set-output name=version_tag::v${{ steps.package-version.outputs.current-version }}
+          echo ::set-output name=release_type::$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")
 
       - name: Build
         run: |
