Add back lint and all tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,8 +147,16 @@ jobs:
       - name: Install
         run: npm ci
 
-      - name: Build
-        run: npm run build-dev
+      
+      - name: Lint
+        run: |
+          npm run lint
+          npm run lint-docs
+          npm run lint-css
 
       - name: Test
-        run: npm run test-render
+        run: |
+          npm run test-unit
+          npm run test-render
+          npm run test-query
+          npm run test-expressions
