Build before test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -149,5 +149,5 @@ jobs:
 
       - name: Test
         run: |
-          npm run test-unit
+          npm run build-tsc
           npm run test-render
