--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -147,7 +147,13 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Lint
+        run: |
+          npm run lint
+          npm run lint-docs
+          npm run lint-css
+
       - name: Test
         run: |
-          npm run build-tsc
+          npm run test-unit
           npm run test-render
