--- a/.github/workflows/ci-test-render.yml
+++ b/.github/workflows/ci-test-render.yml
@@ -22,17 +22,18 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install
-        run: npm ci
+        run: yarn install --frozen-lockfile
 
       - name: Lint
         run: |
-          npm run lint
-          npm run lint-docs
-          npm run lint-css
+          yarn run lint
+          yarn run lint-docs
+          yarn run lint-css
 
       - name: Test
         run: |
-          npm run test-unit
-          npm run test-render
-          npm run test-query
-          npm run test-expressions
+          yarn run test-flow
+          yarn run test-unit
+          yarn run test-render
+          yarn run test-query
+          yarn run test-expressions
