--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
   "rules": {
     "no-dupe-class-members": "off",
     "@typescript-eslint/no-dupe-class-members": ["error"],
+    "no-redeclare": "off",
+    "@typescript-eslint/no-redeclare": ["error"],
     "@typescript-eslint/no-unused-vars": [
       "warn",
       { "argsIgnorePattern": "^_" }
