--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,65 +1,12 @@
 name: Release
 
 on:
-  workflow_dispatch:
-  push:
-    tags:
-      - v*
-    paths-ignore:
-      - ".github/**"
-      - "**/*.md"
+  workflow_dispatch
 
 jobs:
-  lint_build_test:
-    name: Build, Lint and Test
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Use Node.js 14 x64
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-          architecture: x64
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Install
-        run: npm ci
-
-      - name: Validate version tag
-        run: |
-          node build\version-utils.js validate-latest-tag
-
-      - name: Prepare
-        id: prepare
-        run: |
-          $LatestVersionTag=$(node build\version-utils.js latest-version-tag)
-          echo "Latest version tag=$LatestVersionTag"
-          echo "::set-output name=version_tag::$LatestVersionTag"
-
-      - name: Ensure correct revision
-        run: |
-          git checkout tags/${{ steps.prepare.outputs.version_tag }}
-
-      - name: Lint
-        run: |
-          npm run lint
-          npm run lint-docs
-          npm run lint-css
-
-      - name: Test
-        run: |
-          npm run test-unit
-          npm run test-render
-          npm run test-query
-          npm run test-expressions
-
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: lint_build_test
     defaults:
       run:
         shell: bash
@@ -68,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: main
 
       - name: Use Node.js 14 x64
         uses: actions/setup-node@v2
@@ -76,23 +24,27 @@ jobs:
           architecture: x64
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Get version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@v1.1.0
+
+      - name: Check tag does not exist yet
+        run: if git rev-list v${{ steps.package-version.outputs.current-version }}; then echo "Tag already exists. Aborting the release process."; exit 1; fi
+
+      - name: Tag commit and push
+        uses: mathieudutour/github-tag-action@v5.6
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: ${{ steps.package-version.outputs.current-version }}
+
       - name: Install
         run: npm ci
-
-      - name: Validate version tag
-        run: |
-          build/version-utils.js validate-latest-tag
 
       - name: Prepare release
         id: prepare_release
         run: |
-          echo ::set-output name=version_tag::$( build/version-utils.js latest-version-tag)
-          echo ::set-output name=version::$( build/version-utils.js version-from-tags)
-          echo ::set-output name=release_type::$( build/version-utils.js version-type )
-
-      - name: Ensure correct revision
-        run: |
-          git checkout tags/${{ steps.prepare_release.outputs.version_tag }}
+          echo ::set-output name=version_tag::v${{ steps.package-version.outputs.current-version }}
+          echo ::set-output name=release_type::$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")
 
       - name: Build
         run: |
