--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -30,6 +30,7 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
+      - run: npm run build-prod
       - run: npm run build-prod-min
       - run: npm run build-dev
       - run: npm run test-build
