--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -30,7 +30,10 @@ jobs:
           node-version: ${{ matrix.node_version }}
           architecture: ${{ matrix.architecture }}
       - run: npm ci
-      - run: npm run build-prod
       - run: npm run build-prod-min
+      - run: npm run build-prod
+      - run: npm run build-csp
       - run: npm run build-dev
+      - run: npm run build-css
+      - run: npm run build-style-spec
       - run: npm run test-build
