--- a/.github/workflows/test-query.yml
+++ b/.github/workflows/test-query.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test_query:
-    name: Test Query on ubuntu-latest
+    name: ubuntu-latest
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
