--- a/.github/workflows/test-render.yml
+++ b/.github/workflows/test-render.yml
@@ -36,3 +36,19 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" yarn run test-render debug/overdraw
+
+  v_1_14_0:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: v1.14.0
+      - name: Use Node.js 10 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 10
+          architecture: x64
+      - run: yarn install --frozen-lockfile
+      - run: yarn run build-dev
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" yarn run test-render debug/tile-overscaled
