--- a/.github/workflows/test-render.yml
+++ b/.github/workflows/test-render.yml
@@ -37,13 +37,13 @@ jobs:
       - run: yarn run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" yarn run test-render debug/overdraw
 
-  v_1_14_0:
+  before_fork:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
       - uses: actions/checkout@v2
         with:
-          ref: v1.14.0
+          ref: f87090b70b8a6fbde1a779c44933ce32bffc5d2c
       - name: Use Node.js 10 x64
         uses: actions/setup-node@v2
         with:
