Run on macos, include `test-render-revert` branch

--- a/.github/workflows/all-test-render.yml
+++ b/.github/workflows/all-test-render.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
 
 jobs:
-
-  just_before_typescript:
+  just_before_typescript_ubuntu:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -22,3 +21,52 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" yarn run test-render
+
+  just_before_typescript_macos:
+    runs-on: macos-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: 49bc4ca45aba6b6af98df7e1e91735dcb0d6f20f
+      - name: Use Node.js 10 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 10
+          architecture: x64
+      - run: yarn install --frozen-lockfile
+      - run: yarn run build-dev
+      - run: yarn run test-render
+  
+  revert_ubuntu:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: test-render-revert
+      - name: Use Node.js 14 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          architecture: x64
+      - run: npm ci
+      - run: npm run build-dev
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-render
+      
+  revert_macos:
+    runs-on: macos-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: test-render-revert
+      - name: Use Node.js 14 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          architecture: x64
+      - run: npm ci
+      - run: npm run build-dev
+      - run: npm run test-render
+      
