--- a/.github/workflows/all-test-render.yml
+++ b/.github/workflows/all-test-render.yml
@@ -38,6 +38,38 @@ jobs:
       - run: yarn run build-dev
       - run: yarn run test-render
   
+  during_migration_ubuntu:
+    runs-on: ubuntu-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: a963b6e
+      - name: Use Node.js 14 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          architecture: x64
+      - run: npm ci
+      - run: npm run build-dev
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-render
+  
+  during_migration_macos:
+    runs-on: macos-latest
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: a963b6e
+      - name: Use Node.js 14 x64
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+          architecture: x64
+      - run: npm ci
+      - run: npm run build-dev
+      - run: npm run test-render
+      
   revert_ubuntu:
     runs-on: ubuntu-latest
     timeout-minutes: 20
