--- a/.github/workflows/all-test-render.yml
+++ b/.github/workflows/all-test-render.yml
@@ -45,6 +45,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: a963b6e
+          fetch-depth: 0
       - name: Use Node.js 14 x64
         uses: actions/setup-node@v2
         with:
@@ -61,6 +62,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: a963b6e
+          fetch-depth: 0
       - name: Use Node.js 14 x64
         uses: actions/setup-node@v2
         with:
