Run tests on win and mac

--- a/.github/workflows/test-render.yml
+++ b/.github/workflows/test-render.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
 
 jobs:
-
-  test_render:
+  test_render_ubuntu:
     runs-on: ubuntu-latest
     timeout-minutes: 20
     steps:
@@ -20,3 +19,29 @@ jobs:
       - run: npm ci
       - run: npm run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-render
+
+  test_render_win_mac:
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - windows-latest
+        node_version:
+          - 14
+        architecture:
+          - x64
+
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node_version }}
+          architecture: ${{ matrix.architecture }}
+      - run: npm ci
+      - run: npm run build-dev
+      - run: npm run test-render
