--- a/.github/workflows/test-render.yml
+++ b/.github/workflows/test-render.yml
@@ -19,6 +19,10 @@ jobs:
       - run: npm ci
       - run: npm run build-dev
       - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-render
+      - uses: actions/upload-artifact@v2
+        with:
+          name: test-render-ubuntu-latest.html
+          path: test/integration/render-tests/index.html
 
   test_render_win_mac:
     strategy:
@@ -45,3 +49,7 @@ jobs:
       - run: npm ci
       - run: npm run build-dev
       - run: npm run test-render
+      - uses: actions/upload-artifact@v2
+        with:
+          name: test-render-${{ matrix.os }}.html
+          path: test/integration/render-tests/index.html
