--- a/package.json
+++ b/package.json
@@ -138,6 +138,9 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-commonjs": "^10.1.0",
     "selenium-webdriver": "^4.0.0-rc-1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
