--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "declarationMap": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "bench/**/*.ts"
   ],
   "exclude": [
     "node_modules",
