--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pbf": "^3.2.1",
     "potpack": "^1.0.1",
     "quickselect": "^2.0.0",
+    "rollup-plugin-buble": "^0.19.8",
     "rw": "^1.3.3",
     "supercluster": "^7.1.0",
     "tinyqueue": "^2.0.3",
@@ -180,7 +181,7 @@
     "start": "run-p watch-css watch-query watch-benchmarks start-server",
     "start-debug": "run-p watch-css watch-dev start-server",
     "start-tests": "run-p watch-css watch-query start-server",
-    "start-bench": "run-p watch-benchmarks start-server",
+    "start-bench": "run-p watch-dev watch-benchmarks start-server",
     "start-release": "run-s build-prod-min build-css print-release-url start-server",
     "diff-tarball": "node build/diff-tarball.js",
     "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html",
