--- a/src/style-spec/package.json
+++ b/src/style-spec/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@maplibre/maplibre-gl-style-spec",
   "description": "a specification for maplibre gl styles",
-  "version": "14.0.1",
+  "version": "14.0.2",
   "author": "MapLibre",
   "keywords": [
     "mapbox",
@@ -12,8 +12,8 @@
     "maplibre-gl-js"
   ],
   "license": "ISC",
-  "main": "./dist/index.js",
-  "module": "./dist/index.es.js",
+  "main": "./dist/style-spec/index.js",
+  "module": "./dist/style-spec/index.es.js",
   "scripts": {
   },
   "repository": {
