Copy `benchmarks_generated.js.map`

--- a/.github/workflows/upload-benchmarks.yml
+++ b/.github/workflows/upload-benchmarks.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           mkdir tmp
           cp bench/versions/benchmarks_generated.js tmp
+          cp bench/versions/benchmarks_generated.js.map tmp
 
       - name: Upload to GitHub Pages (main)
         if: startsWith(github.ref, 'refs/heads/main')
