--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "minimist": "^1.2.5",
     "murmurhash-js": "^1.0.0",
     "pbf": "^3.2.1",
+    "pdf-merger-js": "^3.2.1",
     "potpack": "^1.0.1",
     "quickselect": "^2.0.0",
     "rollup-plugin-buble": "^0.19.8",
@@ -136,12 +137,12 @@
     "react-dom": "^17.0.2",
     "request": "^2.88.0",
     "rollup": "^2.56.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-commonjs": "^10.1.0",
     "selenium-webdriver": "^4.0.0-rc-1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
@@ -175,7 +176,7 @@
     "build-style-spec": "npm run build-tsc && rollup -c rollup.config.style-spec.js && rollup -c rollup.config.style-spec.js --environment esm",
     "build-diagrams": "cd docs/diagrams; ls *.plantuml | xargs -I {} puml generate --svg {} -o {}.svg",
     "watch-css": "postcss --watch -o dist/maplibre-gl.css src/css/maplibre-gl.css",
-    "build-benchmarks": "npm run build-dev && BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/versions/rollup_config_benchmarks.js",
+    "build-benchmarks": "npm run build-dev && BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js",
     "watch-benchmarks": "BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js -w",
     "start-server": "st --no-cache -H 0.0.0.0 --port 9966 --index index.html .",
     "start": "run-p watch-css watch-query watch-benchmarks start-server",
