--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "potpack": "^1.0.1",
     "quickselect": "^2.0.0",
     "rollup-plugin-buble": "^0.19.8",
+    "rollup-plugin-jsx": "^1.0.3",
     "rw": "^1.3.3",
     "supercluster": "^7.1.0",
     "tinyqueue": "^2.0.3",
@@ -136,12 +137,12 @@
     "react-dom": "^17.0.2",
     "request": "^2.88.0",
     "rollup": "^2.56.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-commonjs": "^10.1.0",
     "selenium-webdriver": "^4.0.0-rc-1",
     "semver": "^7.3.5",
     "shuffle-seed": "^1.1.6",
