Migrate react view to tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
   "include": [
     "src/**/*.ts",
     "bench/**/*.ts",
-    "bench/**/*.js"
+    "bench/**/*.tsx"
   ],
   "exclude": [
     "node_modules",
