--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
     "testem": "^3.5.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "browser": {
