--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,8 @@
     "consistent-return": "off",
     "global-require": "off",
     "import/no-commonjs": "error",
+    // TSC throws an error on unresolved imports; eslint doesn't understand .js extension in import statement
+    "import/no-unresolved": "off",
     "key-spacing": "off",
     "no-eq-null": "off",
     "no-lonely-if": "off",
