--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
     "testem": "^3.5.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "browser": {
@@ -197,7 +198,7 @@
     "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "prepublishOnly": "run-s build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
     "print-release-url": "node build/print-release-url.js",
-    "codegen": "node build/generate-style-code.js && node build/generate-struct-arrays.js"
+    "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts"
   },
   "files": [
     "build/",
