--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "node_modules",
     "lib",
     "dist",
-    "bench/**/*generated*"
+    "bench/**/*generated*",
+    "src/**/*.test.ts"
   ]
 }
