--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "qrcode-terminal": "^0.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "replace-in-file": "^6.2.0",
     "request": "^2.88.0",
     "rollup": "^2.56.3",
     "rollup-plugin-commonjs": "^10.1.0",
