--- a/package.json
+++ b/package.json
@@ -165,8 +165,8 @@
     "./rollup/build/tsc/src/util/web_worker.js": "./build/web_worker_replacement.js"
   },
   "scripts": {
-    "build-glsl": "node rollup/copy-glsl-files.js ./rollup/build/tsc/src/shaders",
-    "build-glsl-min": "node rollup/copy-glsl-files.js ./rollup/build/tsc/src/shaders true",
+    "build-glsl": "node build/copy-glsl-files.js ./rollup/build/tsc/src/shaders",
+    "build-glsl-min": "node build/copy-glsl-files.js ./rollup/build/tsc/src/shaders true",
     "build-tsc": "tsc && npm run build-glsl",
     "build-tsc-min": "tsc && npm run build-glsl-min",
     "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
@@ -186,8 +186,6 @@
     "start-debug": "run-p watch-css watch-dev start-server",
     "start-tests": "run-p watch-css watch-query start-server",
     "start-bench": "run-p watch-css watch-dev watch-benchmarks start-server",
-    "start-release": "run-s build-prod-min build-css print-release-url start-server",
-    "diff-tarball": "node build/diff-tarball.js",
     "lint": "eslint --ext \".ts,.js,.html\" --ignore-path .gitignore src build debug/*.html bench",
     "lint-docs": "documentation lint src/index.ts",
     "lint-css": "stylelint \"src/css/maplibre-gl.css\"",
@@ -204,8 +202,6 @@
     "test-expressions": "node --experimental-specifier-resolution=node test/expression.test.js",
     "test-cov": "nyc --reporter=text-summary --reporter=lcov --cache run-s test-unit test-expressions test-query test-render",
     "test-jest": "jest",
-    "prepublishOnly": "run-s build-dev build-prod-min build-prod build-csp build-css build-style-spec test-build diff-tarball",
-    "print-release-url": "node build/print-release-url.js",
     "codegen": "node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-code.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-struct-arrays.ts && node --loader ts-node/esm --experimental-specifier-resolution=node build/generate-style-spec.ts"
   },
   "files": [
