--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^27.2.5",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
