[Jest] Migrate mapbox gl.test.js (#452)
* Move and rename

* migrate

* 1. Error: window.performance.mark = () => { };

* 2. Error Jest encountered an unexpected token

* 3 Error:  Jest encountered an unexpected token - glsl-files

* run with correct node versions

* rename file to index.test.ts and mapbox to maplibre

* run npm ci

* run npm ci with node 14.18.0 and npm6.14.15

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "address": "^1.1.2",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^27.2.5",
     "babelify": "^10.0.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
@@ -111,6 +112,7 @@
     "glob": "^7.1.4",
     "is-builtin-module": "^3.0.0",
     "jest": "^27.2.4",
+    "jest-raw-loader": "^1.0.1",
     "jsdom": "^13.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
     "jsonwebtoken": "^8.3.0",
