--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [1.x]
   pull_request:
-    branches: [main]
+    branches: [1.x]
 
 jobs:
   lint_build_test:
