--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
     "@mapbox/gazetteer": "^5.1.0",
     "@mapbox/mapbox-gl-rtl-text": "^0.2.1",
     "@mapbox/mvt-fixtures": "^3.6.0",
@@ -92,6 +93,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^27.2.5",
     "babelify": "^10.0.0",
+    "babel-plugin-search-and-replace": "^1.1.0",
     "benchmark": "^2.1.4",
     "browserify": "^17.0.0",
     "canvas": "^2.6.1",
@@ -161,7 +163,6 @@
     "tape": "^5.3.1",
     "tape-filter": "^1.0.4",
     "testem": "^3.5.0",
-    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
