--- a/.github/workflows/test-jest.yml
+++ b/.github/workflows/test-jest.yml
@@ -6,13 +6,12 @@ on:
   pull_request:
 
 jobs:
-  test_jest:
+  test_jest_win_mac:
     strategy:
       matrix:
         os:
           - macos-latest
           - windows-latest
-          - ubuntu-latest
         node_version:
           - 14
         architecture:
@@ -29,3 +28,25 @@ jobs:
           architecture: ${{ matrix.architecture }}
       - run: npm ci
       - run: npm run test-jest
+
+  test_jest_ubuntu:
+    strategy:
+      matrix:
+        os:
+          - ubuntu-latest
+        node_version:
+          - 14
+        architecture:
+          - x64
+
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node_version }}
+          architecture: ${{ matrix.architecture }}
+      - run: npm ci
+      - run: xvfb-run -s "-ac -screen 0 1280x1024x24" npm run test-jest
