--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
   "plugins": [
     "@typescript-eslint",
     "import",
-    "jsdoc"
+    "jsdoc",
+    "jest"
   ],
   "rules": {
     "no-dupe-class-members": "off",
@@ -91,7 +92,13 @@
     "jsdoc/require-param-description": "warn",
     "jsdoc/require-param-name": "warn",
     "jsdoc/require-returns": "warn",
-    "jsdoc/require-returns-description": "warn"
+    "jsdoc/require-returns-description": "warn",
+    
+    // Jest https://www.npmjs.com/package/eslint-plugin-jest
+    "jest/no-disabled-tests": "warn",
+    "jest/no-focused-tests": "error",
+    "jest/prefer-to-have-length": "warn",
+    "jest/valid-expect": "error"    
   },
   "settings": {
     "jsdoc":{
