--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "eslint-config-mourner": "^3.0.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-jsdoc": "^36.0.8",
     "eslint-plugin-react": "^7.25.1",
     "gl": "^4.5.3",
@@ -113,8 +114,8 @@
     "is-builtin-module": "^3.0.0",
     "jest": "^27.2.4",
     "jest-canvas-mock": "^2.3.1",
-    "jest-raw-loader": "^1.0.1",
     "jest-codemods": "^0.24.0",
+    "jest-raw-loader": "^1.0.1",
     "jscodeshift": "^0.13.0",
     "jsdom": "^13.0.0",
     "json-stringify-pretty-compact": "^3.0.0",
