add rule prrfer-to-be and run npm run lint -- --fix

--- a/.eslintrc
+++ b/.eslintrc
@@ -98,7 +98,8 @@
     "jest/no-disabled-tests": "warn",
     "jest/no-focused-tests": "error",
     "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error"    
+    "jest/valid-expect": "error",
+    "jest/prefer-to-be": "warn"   
   },
   "settings": {
     "jsdoc":{
