--- a/.eslintrc
+++ b/.eslintrc
@@ -99,7 +99,8 @@
     "jest/no-focused-tests": "error",
     "jest/prefer-to-have-length": "warn",
     "jest/valid-expect": "error",
-    "jest/prefer-to-be": "warn"   
+    "jest/prefer-to-be": "warn",
+    "jest/no-alias-methods": "warn"
   },
   "settings": {
     "jsdoc":{
