--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -10,8 +10,9 @@ jobs:
       - uses: actions/stale@v4
         with:
           stale-issue-message: 'This issue is stale because it has been open 180 days with no activity. Remove stale label or comment or this will be closed in 30 days.'
-          stale-pr-message: 'This PR is stale because it has been open 180 days with no activity. Remove stale label or comment or this will be closed in 30 days.'
+          stale-pr-message: 'This PR is stale because it has been open 60 days with no activity. Remove stale label or comment or this will be closed in 30 days.'
           close-issue-message: 'This issue was closed because it has been stalled for 30 days with no activity.'
           close-pr-message: 'This PR was closed because it has been stalled for 30 days with no activity.'
-          days-before-stale: 180
+          days-before-pr-stale: 60
+          days-before-issue-stale: 180
           days-before-close: 30
