--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "DOM.Iterable",
       "WebWorker"
     ],
+    "types": ["node", "jest", "geojson", "offscreencanvas"],
     "outDir": "rollup/build/tsc",
     "declarationDir": "types",
     "declarationMap": true
