Fix start-debug to watch ts files

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-strip": "^2.1.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@types/babel__core": "^7.1.12",
     "@types/babelify": "^7.3.6",
     "@types/benchmark": "^2.1.0",
@@ -151,6 +152,7 @@
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-unassert": "^0.3.0",
+    "rollup-pluginutils": "^2.8.2",
     "rw": "^1.3.3",
     "selenium-webdriver": "^4.0.0-rc-1",
     "semver": "^7.3.5",
@@ -173,18 +175,15 @@
     "./rollup/build/tsc/src/util/web_worker.js": "./build/web_worker_replacement.js"
   },
   "scripts": {
-    "build-post-ts": "node build/post-ts-build.js ./rollup/build/tsc/src/shaders",
-    "build-post-ts-min": "node build/post-ts-build.js ./rollup/build/tsc/src/shaders true",
-    "build-tsc": "tsc && npm run build-post-ts",
-    "build-tsc-min": "tsc && npm run build-post-ts-min",
-    "build-dev": "npm run build-tsc && rollup -c --environment BUILD:dev",
-    "watch-dev": "npm run build-tsc && rollup -c --environment BUILD:dev --watch",
-    "build-prod": "npm run build-tsc && rollup -c --environment BUILD:production",
-    "build-prod-min": "npm run build-tsc-min && rollup -c --environment BUILD:production,MINIFY:true",
+    "bundle-types": "node build/bundle-types.js",
+    "build-dev": "npm run bundle-types && rollup -c --environment BUILD:dev",
+    "watch-dev": "rollup -c --environment BUILD:dev --watch",
+    "build-prod": "npm run bundle-types && rollup -c --environment BUILD:production",
+    "build-prod-min": "npm run bundle-types && rollup -c --environment BUILD:production,MINIFY:true",
     "build-csp": "rollup -c rollup.config.csp.js",
     "build-query-suite": "rollup -c test/integration/rollup.config.test.js",
     "build-css": "postcss -o dist/maplibre-gl.css src/css/maplibre-gl.css",
-    "build-style-spec": "npm run build-tsc && rollup -c rollup.config.style-spec.js && rollup -c rollup.config.style-spec.js --environment esm",
+    "build-style-spec": "npm run bundle-types && rollup -c rollup.config.style-spec.js && rollup -c rollup.config.style-spec.js --environment esm",
     "build-diagrams": "cd docs/diagrams; ls *.plantuml | xargs -I {} puml generate --svg {} -o {}.svg",
     "watch-css": "postcss --watch -o dist/maplibre-gl.css src/css/maplibre-gl.css",
     "build-benchmarks": "npm run build-dev && BENCHMARK_VERSION=${BENCHMARK_VERSION:-\"$(git rev-parse --abbrev-ref HEAD) $(git rev-parse --short=7 HEAD)\"} rollup -c bench/rollup_config_benchmarks.js",
