--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "npm-packlist": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
+    "pdf-merger-js": "^3.2.1",
     "pirates": "^4.0.1",
     "pixelmatch": "^5.1.0",
     "pngjs": "^6.0.0",
