--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "maplibre-gl",
+  "name": "@globalfishingwatch/maplibre-gl",
   "description": "BSD licensed community fork of mapbox-gl, a WebGL interactive maps library",
-  "version": "2.0.0-pre.6",
+  "version": "2.0.0-gfw.1",
   "main": "dist/maplibre-gl.js",
   "style": "dist/maplibre-gl.css",
   "license": "BSD-3-Clause",
@@ -15,9 +15,11 @@
   "types": "dist/maplibre-gl.d.ts",
   "type": "module",
   "dependencies": {
+    "@globalfishingwatch/fourwings-aggregate": "4.0.1",
     "@mapbox/geojson-rewind": "^0.5.0",
     "@mapbox/jsonlint-lines-primitives": "^2.0.2",
     "@mapbox/mapbox-gl-supported": "^2.0.1",
+    "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/tiny-sdf": "^2.0.4",
     "@mapbox/unitbezier": "^0.0.1",
     "@mapbox/vector-tile": "^1.3.1",
