--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "WebWorker"
     ],
     "typeRoots": ["./src/types/packages-types", "node_modules/@types"],
-    "types": ["node", "jest", "geojson", "offscreencanvas", "grid-index", "vector-tile"]
+    "types": ["node", "jest", "geojson", "offscreencanvas", "vector-tile"]
   },
   "include": [
     "src/**/*.ts",
